Update brand name and tagline in index.html

--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@
         <!-- عکس لوگو رو حتماً با اسم logo.jpg آپلود کن -->
         <img src="logo.jpg" alt="XO OSKAR" class="logo-img">
 
-        <h1 class="brand-name">XO OSKAR</h1>
-        <p class="tagline">▪️ Shadow and Comando ▪️<br>به دنیای تاریک خوش آمدید ⚡</p>
+        <h1 class="brand-name">OSKAR</h1>
+        <p class="tagline">▪️ Shadow and Comando ▪️<br>  خوش امدید OSKAR به تیم آمدید ⚡</p>
 
         <div class="links">
             <a href="https://t.me/XO_OSKAR" target="_blank" class="link-btn">
-                <i class="fab fa-telegram icon"></i> چنل اصلی ØSƘAR
+                <i class="fab fa-telegram icon"></i> چنل  ØSƘAR
             </a>
             <a href="https://t.me/XO_OSKARbot" target="_blank" class="link-btn">
-                <i class="fab fa-telegram icon"></i> ربات ارتباطات
+                <i class="fab fa-telegram icon"></i>  ارتباطات
             </a>
             <a href="https://t.me/shadow_alonex" target="_blank" class="link-btn">
-                <i class="fab fa-telegram icon"></i> Shadow | مورفین
+                <i class="fab fa-telegram icon"></i> Shadow
             </a>
-            <a href="https://t.me/NiCaToR_NKR" target="_blank" class="link-btn">
+            <a href="https://t.me/JAKOMES" target="_blank" class="link-btn">
                 <i class="fab fa-telegram icon"></i> Comando
             </a>
         </div>
