--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <img src="logo.jpg" alt="XO OSKAR" class="logo-img">
 
         <h1 class="brand-name">OSKAR</h1>
-        <p class="tagline">▪️ Shadow and Comando ▪️<br>خوش امدید OSKAR به تیم</p>
+        <p class="tagline">▪️ Shadow and Comando ▪️<br>به تیم OSKAR خوش امدید</p>
 
         <div class="links">
             <a href="https://t.me/XO_OSKAR" target="_blank" class="link-btn">
